<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>chartsearchai</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Chart Search AI Module</name>
	<description>AI-powered chart search module for OpenMRS</description>

	<url>https://wiki.openmrs.org/display/docs/Chart+Search+AI+Module</url>

	<organization>
		<name>OpenMRS</name>
		<url>https://openmrs.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-chartsearchai.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-chartsearchai.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-chartsearchai</url>
	</scm>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<properties>
		<openmrsPlatformVersion>2.8.0</openmrsPlatformVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<surefire.excludedGroups>eval</surefire.excludedGroups>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>${maven.compiler.target}</target>
						<source>${maven.compiler.source}</source>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.5</version>
					<configuration>
						<excludedGroups>${surefire.excludedGroups}</excludedGroups>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>natives-macos-aarch64</id>
			<activation>
				<os><family>mac</family><arch>aarch64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>macos-aarch64</llama.natives.classifier>
			</properties>
		</profile>
		<profile>
			<id>natives-macos-x86_64</id>
			<activation>
				<os><family>mac</family><arch>x86_64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>macos-x86_64</llama.natives.classifier>
			</properties>
		</profile>
		<profile>
			<id>natives-linux-aarch64</id>
			<activation>
				<os><name>linux</name><arch>aarch64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>linux-aarch64</llama.natives.classifier>
			</properties>
		</profile>
		<profile>
			<id>natives-linux-x86_64</id>
			<activation>
				<os><name>linux</name><arch>amd64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>linux-x86_64</llama.natives.classifier>
			</properties>
		</profile>
		<profile>
			<id>natives-windows-x86_64</id>
			<activation>
				<os><family>windows</family><arch>amd64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>windows-x86_64</llama.natives.classifier>
			</properties>
		</profile>
		<profile>
			<id>natives-windows-aarch64</id>
			<activation>
				<os><family>windows</family><arch>aarch64</arch></os>
			</activation>
			<properties>
				<llama.natives.classifier>windows-aarch64</llama.natives.classifier>
			</properties>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>OpenMRS Modules</name>
			<url>https://mavenrepo.openmrs.org/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://mavenrepo.openmrs.org/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
</project>
